After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 748341 - GdkOffscreenWindow should not segfault on gdk_window_beep()
GdkOffscreenWindow should not segfault on gdk_window_beep()
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
3.16.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-04-22 23:34 UTC by Christian Hergert
Modified: 2015-04-27 10:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
add dummy func to avoid segfault (1.12 KB, patch)
2015-04-22 23:36 UTC, Christian Hergert
committed Details | Review

Description Christian Hergert 2015-04-22 23:34:44 UTC
While it shouldn't be a typical flow, sometimes offscreen windows are useful for testing without a full dogtail setup.

Calling gdk_window_beep() on an offscreen window segfaults since there is no check for the vfunc before calling.
Comment 1 Christian Hergert 2015-04-22 23:36:53 UTC
Created attachment 302190 [details] [review]
add dummy func to avoid segfault

Small patch does nothing in the vfunc. Returns FALSE so the display may still be beeped. (which is probably irrelevant).