gdk: don't segfault on beep with offscreen window

https://bugzilla.gnome.org/show_bug.cgi?id=748341